<resources>
    <string name="app_name">MCS_Project</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="phone">Phone Number</string>
    <string name="pass">Password</string>
    <string name="confirmpass">Confirm Password</string>

    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="gotoRegPage">Go to Register Page</string>
    <string name="gotoLogPage">Go to Login Page</string>

    <string name="alreadyhaveanaccount">Already have an account?</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>